test_programs/compile_failure/associated_constants_do_not_accept_turbofish/src/main.nr
pub trait Foo {
    let N: u32;

    fn foo() -> [Field; Self::N::<i32>] {
        [0; Self::N::<i32>]
    }
}

fn main() {}
